<resources>
    <string name="app_name">Combinatie Herepoort</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Instellingen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="company_name">Ontwikkeld door LabsIT</string>
    <string name="login_screen_text">Log in om verder te gaan</string>
    <string name="username_hint">E-mailadres</string>
    <string name="password_hint">Wachtwoord</string>
    <string name="login_button_text">INLOGGEN</string>


    <string name="select_vehicle_heading">Kenteken voertuig</string>
    <string name="select_vehicle_button_text">BEVESTIGEN</string>
    <string name="select_vehicle_hint">type uw kenteken</string>

    <string name="select_hanging_heading">Aanhanger (optioneel)</string>
    <string name="select_hanging_hint">type uw kenteken</string>

    <string name="select_outsourced_carrier_heading">Uitbesteed vervoerder?</string>
    <string name="select_outsourced_carrier_hint">type vervoerder</string>

    <string name="select_transaction_heading">Type transactie</string>
    <string name="select_transaction_hint">selecteer...</string>

    <string name="select_material_type_heading">Materiaalsoort</string>
    <string name="select_material_type_hint">selecteer...</string>

    <string name="select_cluster_heading">Cluster</string>
    <string name="select_cluster_hint">selecteer...</string>


    <string name="select_lot_number_heading">Partijnummer</string>
    <string name="select_lot_number_hint">selecteer...</string>




    <string name="menu_orders">Orders</string>
    <string name="menu_settings">Instellingen</string>
    <string name="menu_logout">Uitloggen</string>
    <string name="title_activity_select_selection">SelectSelectionActivity</string>


    <string name="order_pending_button_text">BEVESTIGEN</string>
    <string name="order_accepted_button_text">GEWICHT INVOEREN</string>

    <string name="comfirm_order_dialog_title">GEWICHT INVOEREN</string>
    <string name="comfirm_order_dialog_accept_button_text">BEVESTIGEN</string>
    <string name="comfirm_order_dialog_dummy_button_text">OPVRAGEN</string>
    <string name="confirm_order_dialog_input_hint">0.000 (ton)</string>
    <string name="action_reciept">Begeleidingsbrief</string>
    <string name="afronden_button_text">AFRONDEN</string>
    <string name="order_page_heading">RIT AANMAKEN</string>
    <string name="action_delete">Verwijderen</string>
    <string name="hanging_weight_hint">00.000 ton</string>
    <string name="vehicle_weight_hint">00.000 ton</string>
    <string name="my_paypal_account">arwahaji91@gmail.com</string>
</resources>
