<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minWidth="800dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfirm_order_dialog_title"
            android:textColor="#FFFFFF"
            android:textSize="20dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/weightInput"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/confirm_order_dialog_input_hint"
        android:inputType="numberDecimal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/confirm"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/order_accepted_button_color"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/comfirm_order_dialog_accept_button_text" />

        <Button
            android:id="@+id/dummy"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/comfirm_order_dialog_dummy_button_text" />
    </LinearLayout>

</LinearLayout>